fixed cursor on advisors avatars, changed all popup-wrappers to signup wrappers for now, changed top margin to 2% to fix cutoff issues on smaller(~1200) screens.

--- a/src/sass/modals.scss
+++ b/src/sass/modals.scss
@@ -17,7 +17,7 @@
 }
 
 .signup-wrapper {
-  margin: 10vh 25vw;
+  margin: 2vh 25vw;
   .popup-outer-wrapper {
     width: 50vh;
   }
@@ -264,6 +264,7 @@
 }
 
 .advisor {
+  cursor: pointer;
   display: inline-block;
   text-transform: uppercase;
   width: 25%;
